--- a/manual/publishing-a-ruby-gem.html
+++ b/manual/publishing-a-ruby-gem.html
@@ -144,6 +144,11 @@
       </li>
       <li>
         <a href="#releasing-gem-versions"><span>Releasing gem versions</span></a>
+        <ul>
+          <li>
+            <a href="#manually-publishing-gems-from-the-cli"><span>Manually publishing gems from the CLI</span></a>
+          </li>
+        </ul>
       </li>
       <li>
         <a href="#clearing-the-gemstash-cache"><span>Clearing the gemstash cache</span></a>
@@ -199,7 +204,7 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/51edbfd0d17ff388a5b3a06a58ebf0fcc5cd83e2">6 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/4ba7baf823c5c2ea0d686d9620490190f58a6c86">16 Jun 2021</a>
 </div>
 
  <h1 id='header'>Publish a Ruby gem</h1> <h2 id='naming'>Naming</h2><p>In general, the gem name should be the same as the thing you require when using
@@ -232,6 +237,30 @@ file).</li>
 <code>gemspec</code> file and publish the gem to rubygems.org. See the
 <a href="https://github.com/alphagov/govuk_app_config/blob/master/Jenkinsfile">Jenkinsfile for govuk_app_config</a>
 for an example.</p>
+<h3 id='manually-publishing-gems-from-the-cli'>Manually publishing gems from the CLI</h3><p>Sometimes you may be required to publish a gem outside of Jenkins, if you need
+to release a patch or minor version below the current latest major version.
+For example, say you have a gem at version 1.0.0 and later release a major breaking
+change as version 2.0.0. If you still need to support apps using v1, and you want
+to apply a bugfix as a patch version 1.0.1, you would not be able to deploy off
+the <code>main</code> branch as this will include all of the breaking v2 changes.</p>
+<p>To manually publish from the command line:</p>
+
+<ol>
+<li>Get your branch ready: checkout the tag of the previous major version (e.g.
+<code>git checkout v1.0.0</code>) and then create a branch pointing at this commit
+(<code>git checkout -b bump-version-to-1.0.1</code>).</li>
+<li>Get your code ready: make your code changes, including adding a CHANGELOG entry
+and bumping the version number.</li>
+<li>Commit.</li>
+<li>Manually follow the steps of the <a href="https://github.com/alphagov/govuk-jenkinslib/blob/c25c362dd8288e92a09b6f6cc9b5dd6fd6c12c84/vars/govuk.groovy#L762-L806"><code>publishGem</code> function in govuk-jenkinslib</a>
+i.e. check your new version doesn&rsquo;t already exist, build &amp; publish the gem,
+make and push a git tag. The RubyGems credentials can be found in govuk-secrets.</li>
+<li>Tidy up: open a pull request for this branch against <code>main</code>. There will be merge
+conflicts, which you&rsquo;ll have to manually resolve before you can merge. Do this
+<strong>without rebasing</strong>, as we want to keep the original <code>main</code> history. You&rsquo;ll end
+up with a meta commit like <code>Merge pull request #1 from username/branch-name</code>,
+but the full history of both <code>main</code> and your branch will be intact.</li>
+</ol>
 <h2 id='clearing-the-gemstash-cache'>Clearing the gemstash cache</h2><p>When a new gem version is released, it may not be available immediately on Jenkins.
 This is due to <a href="https://github.com/bundler/gemstash/">gemstash</a>, our gem mirror. It caches versions for up to 30
 minutes. To force it to clear, restart <code>gemstash</code> on the <code>apt</code> machine in the
