--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
-<li><a href="https://www.gov.ukhttp//www.basingstoke.gov.uk">Basingstoke and Deane Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/">Care homes - NHS</a></li>
-<li><a href="https://www.gov.ukhttp//www.middevon.gov.uk">Mid Devon District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.harlow.gov.uk">Harlow District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hounslow.gov.uk">London Borough of Hounslow Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dundeecity.gov.uk">Dundee City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.wyrebc.gov.uk/">Wyre Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.chorley.gov.uk">Chorley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.chichester.gov.uk">Chichester District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.ncsc.gov.uk">National Cyber Security Centre</a></li>
+<li><a href="https://www.gov.ukhttp//publicappointments.cabinetoffice.gov.uk/">Public Appointments - Cabinet Office</a></li>
+<li><a href="https://www.gov.ukhttp//www.north-ayrshire.gov.uk">North Ayrshire Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.york.gov.uk">York City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hastings.gov.uk">Hastings Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.haringey.gov.uk/">London Borough of Haringey Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/nhs-services/online-services/nhs-app/">NHS App</a></li>
+<li><a href="https://www.gov.ukhttp//www.bradford.gov.uk">City of Bradford Metropolitan District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
