--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/--8">英國貿易投資署和英國智慧財產權官員協助蘇格蘭威士忌協會打擊中國侵權，成功捍衛蘇格蘭原產地地理標示資格</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232335.es-419">Doce universidades británicas visitaron la Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-islands-cabinet-update-and-actions--4">Turks and Caicos Islands Cabinet update and actions</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171667.pt">Desafio GREAT levará jovens jornalistas `a Londres</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/hm-ambassadors-eid-message--2">HM Ambassador&rsquo;s Eid message</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/high-level-uk-ghana-partnership-to-boost-trade-and-jobs">High Level UK-Ghana partnership to boost trade and jobs</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212818.es">El Gobierno británico anuncia un plan para eliminar la burocracia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expats-dont-lose-your-vote-in-the-european-parliament-elections--2">British expats: Don’t lose your vote in the European Parliament elections</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-zagreb-closed-for-easter-holidays">British Embassy Zagreb and British consulates are closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-english-speaking-union-belarus-public-speaking-competition">The English Speaking Union Belarus Public Speaking Competition</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/255719.es">Reino Unido, a la vanguardia en servicios de tecnología financiera</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/structural-survey-of-anguillas-main-jetty-by-major-andy-nixon-mbe">Structural Survey of Anguilla&rsquo;s Main Jetty by Major Andy Nixon MBE</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240429.pt">COMUNICADO AOS INSCRITOS NO WORSHOP &ldquo;ARTE DA CERVEJA BRITÂNICA&rdquo;</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/applications-for-chevening-scholarships-in-bolivia-are-open--2">Applications for Chevening Scholarships in Bolivia are open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257425.ja">英国ショッピングウィークを今秋、日本で初開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/242212.el">Εκδήλωση για τον εορτασμό των γενεθλίων της ΑΜ Της Βασίλισσας Ελισάβετ ΙΙ</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294447.pt">Inovações Britânicas na área da saúde na Hospitalar 2015</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
