--- a/manual/zendesk.html
+++ b/manual/zendesk.html
@@ -210,7 +210,7 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/894eef769db48d9f0031db5adfdb6cf96a324acb">1 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/e09dc302133a0a0b80e166c8e4eb8a9b56364537">17 Jun 2021</a>
 </div>
 
  <h1 id='header'>Zendesk</h1> <p>2nd line Zendesk tickets are technical errors reported by our users, including government publishers.</p>
@@ -248,7 +248,7 @@ staff to pick up where you left off if you&rsquo;re unable to solve the ticket y
 can see internal notes, so don’t write anything you wouldn’t say to someone publicly.</p>
 <p>If you need more information from the user, or confirmation that everything is now working as expected, fill
 in the &ldquo;Public reply&rdquo; as appropriate and click &ldquo;Submit as Pending&rdquo;.</p>
-<h2 id='subject-access-requests'>Subject Access Requests</h2><p>This <a href="https://docs.google.com/document/d/1EzlOfMmapcg0IrKZNPqtm-YSmPKrUSNBAk-S2Qk24Uo/edit?usp=sharing">Google Doc describes what to do if you receive a Subject Access Request through Zendesk</a>.</p>
+<h2 id='subject-access-requests'>Subject Access Requests</h2><p>This <a href="https://docs.google.com/document/d/1EzlOfMmapcg0IrKZNPqtm-YSmPKrUSNBAk-S2Qk24Uo/edit?usp=sharing">Google Doc describes what to do if you receive a GDPR Subject Access Request through Zendesk</a>.</p>
 <h2 id='closing-a-ticket'>Closing a ticket</h2><p>Once you&rsquo;ve resolved a ticket, click &ldquo;Submit as Solved&rdquo;.</p>
 <h2 id='tickets-left-pending-without-a-response'>Tickets left pending without a response</h2><p>Note that if a ticket has been resolved and pending a response for 5 or more days with no response from the
 requester, you can submit it as solved with a message telling them why and that if they still need help they
