--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.castlereagh.gov.uk" class="govuk-link">Castlereagh Borough Council</a></li>
-      <li><a href="http://www.lewes-eastbourne.gov.uk" class="govuk-link">Eastbourne Borough Council</a></li>
-      <li><a href="http://www.plymouth.gov.uk" class="govuk-link">Plymouth City Council</a></li>
-      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
-      <li><a href="http://www.hyndburnbc.gov.uk" class="govuk-link">Hyndburn Borough Council</a></li>
-      <li><a href="https://www.nidirect.gov.uk/campaigns/coronavirus-covid-19" class="govuk-link">Coronavirus (COVID-19) in Northern Ireland - nidirect</a></li>
-      <li><a href="http://www.inverclyde.gov.uk" class="govuk-link">Inverclyde Council</a></li>
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.oxfordshire.gov.uk/" class="govuk-link">Oxfordshire County Council</a></li>
-      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
+      <li><a href="https://www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/" class="govuk-link">Talking therapy - NHS</a></li>
+      <li><a href="http://www.basingstoke.gov.uk" class="govuk-link">Basingstoke and Deane Borough Council</a></li>
+      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
+      <li><a href="http://www.middevon.gov.uk" class="govuk-link">Mid Devon District Council</a></li>
+      <li><a href="http://www.harlow.gov.uk" class="govuk-link">Harlow District Council</a></li>
+      <li><a href="http://www.hounslow.gov.uk" class="govuk-link">London Borough of Hounslow Council</a></li>
+      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
+      <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
+      <li><a href="http://www.wyrebc.gov.uk/" class="govuk-link">Wyre Borough Council</a></li>
+      <li><a href="http://www.york.gov.uk" class="govuk-link">York City Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
